https://www.elastic.co/guide/en/apm/agent/java/current/release-notes.html[elastic.co]
endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased

[[release-notes-1.24.1]]
==== 1.24.1 - YYYY/MM/DD

[float]
===== Features

[float]
===== Bug fixes

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.24.0]]
==== 1.24.0 - 2021/05/31

[float]
===== Features
* Basic support for Apache Struts 2 {pull}1763[#1763]
* Extending the <<config-log-ecs-reformatting>> config option to enable the overriding of logs with ECS-reformatted
events. With the new `OVERRIDE` option, non-file logs can be ECS-reformatted automatically as well - {pull}1793[#1793]
* Instrumentation for Vert.x Web {pull}1697[#1697]
* Changed log level of vm arguments to debug
* Giving precedence for the W3C `tracecontext` header over the `elastic-apm-traceparent` header - {pull}1821[#1821]
* Add instrumentation for Webflux - {pull}1305[#1305]

[float]
===== Bug fixes
* Fix another error related to instrumentation plugins loading on Windows - {pull}1785[#1785]
* Load Spring AMQP plugin- {pull}1784[#1784]
* Avoid `IllegalStateException` when multiple `tracestate` headers are used - {pull}1808[#1808]
* Ensure CLI attach avoids `sudo` only when required and avoid blocking - {pull}1819[#1819]
* Avoid sending metric-sets without samples, so to adhere to the intake API - {pull}1826[#1826]
* Fixing our type-pool cache, so that it can't cause OOM (softly-referenced), and it gets cleared when not used for
a while - {pull}1828[#1828]

[float]
===== Refactors
* Remove single-package limitation for embedded plugins - {pull}1780[#1780]

[[release-notes-1.23.0]]
==== 1.23.0 - 2021/04/22

[float]
===== Breaking changes
* There are breaking changes in the <<setup-attach-cli,attacher cli>>.
  See the Features section for more information.

[float]
===== Features