@@ -27,6 +27,7 @@ package co.elastic.apm.agent.pluginapi;
 import co.elastic.apm.agent.bci.TracerAwareInstrumentation;
 import co.elastic.apm.agent.bci.bytebuddy.AnnotationValueOffsetMappingFactory.AnnotationValueExtractor;
 import co.elastic.apm.agent.bci.bytebuddy.SimpleMethodSignatureOffsetMappingFactory.SimpleMethodSignature;
+import co.elastic.apm.agent.configuration.CoreConfiguration;
 import co.elastic.apm.agent.impl.ElasticApmTracer;
 import co.elastic.apm.agent.impl.stacktrace.StacktraceConfiguration;
 import co.elastic.apm.agent.impl.transaction.Outcome;
@@ -47,6 +48,7 @@ import java.util.Collection;
 import static co.elastic.apm.agent.bci.bytebuddy.CustomElementMatchers.classLoaderCanLoadClass;
 import static co.elastic.apm.agent.bci.bytebuddy.CustomElementMatchers.isInAnyPackage;
 import static co.elastic.apm.agent.bci.bytebuddy.CustomElementMatchers.isProxy;
+import static co.elastic.apm.agent.bci.bytebuddy.CustomElementMatchers.overridesOrImplementsMethodThat;
 import static co.elastic.apm.agent.impl.transaction.AbstractSpan.PRIO_METHOD_SIGNATURE;
 import static co.elastic.apm.agent.impl.transaction.AbstractSpan.PRIO_USER_SUPPLIED;
 import static co.elastic.apm.agent.pluginapi.ElasticApmApiInstrumentation.PUBLIC_API_INSTRUMENTATION_GROUP;
@@ -60,10 +62,12 @@ public class CaptureTransactionInstrumentation extends TracerAwareInstrumentatio
 
     public static final Logger logger = LoggerFactory.getLogger(CaptureTransactionInstrumentation.class);
 
-    private final StacktraceConfiguration config;
+    private final CoreConfiguration coreConfig;
+    private final StacktraceConfiguration stacktraceConfig;
 
     public CaptureTransactionInstrumentation(ElasticApmTracer tracer) {
-        config = tracer.getConfig(StacktraceConfiguration.class);
+        coreConfig = tracer.getConfig(CoreConfiguration.class);
+        stacktraceConfig = tracer.getConfig(StacktraceConfiguration.class);
     }
 
     @Nullable
@@ -111,13 +115,16 @@ public class CaptureTransactionInstrumentation extends TracerAwareInstrumentatio
 
     @Override
     public ElementMatcher<? super TypeDescription> getTypeMatcher() {
-        return isInAnyPackage(config.getApplicationPackages(), ElementMatchers.<NamedElement>none())
+        return isInAnyPackage(stacktraceConfig.getApplicationPackages(), ElementMatchers.<NamedElement>none())
             .and(not(isProxy()))
             .and(declaresMethod(getMethodMatcher()));
     }
 
     @Override
     public ElementMatcher<? super MethodDescription> getMethodMatcher() {
+        if (coreConfig.isEnablePublicApiAnnotationInheritance()) {
+            return overridesOrImplementsMethodThat(isAnnotatedWith(named("co.elastic.apm.api.CaptureTransaction")));
+        }
         return isAnnotatedWith(named("co.elastic.apm.api.CaptureTransaction"));
     }
 
