@@ -25,6 +25,7 @@ endif::[]
 
 [float]
 ===== Features
+* Support for inheritance of public API annotations {pull}1805[#1805]
 
 [float]
 ===== Bug fixes
